--- a/HeroesOfPymoli/HeroesOfPymoli_KP.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_KP.ipynb
@@ -1605,7 +1605,7 @@
     }
    ],
    "source": [
-    "#Combine Age Group \"total count\" and \"percentage\" to create tabel with summary of age demographics\n",
+    "#Combine Age Group \"total count\" and \"percentage\" to create table with summary of age demographics\n",
     "age_total[\"Percentage of Players\"] = age_percent\n",
     "age_total"
    ]
